<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/patientLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientRegisterActivity">


    <EditText
        android:id="@+id/healthCard"
        android:layout_width="0dp"

        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="Health Card Number"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/address"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/address"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="48dp"


        android:layout_marginTop="84dp"
        android:ems="10"
        android:hint="First Name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="last Name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/firstName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/firstName"
        app:layout_constraintTop_toBottomOf="@+id/firstName" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="emailAddress"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/lastName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lastName"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="phoneNumber"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <EditText
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="address"
        app:layout_constraintEnd_toEndOf="@+id/phoneNumber"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/phoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/emailAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailAddress"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress" />

    <Button
        android:id="@+id/registerPatientButton"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/healthCard"
        app:layout_constraintStart_toStartOf="@+id/healthCard"
        app:layout_constraintTop_toBottomOf="@+id/healthCard" />


    <Button
        android:id="@+id/registerPatientButtonClickBackward"

        android:layout_width="83dp"
        android:layout_height="38dp"
        android:text="back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.992" />

    <TextView
        android:id="@+id/textWarnFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="Please enter your first name"
        android:textColor="#D13C3C"

        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/firstName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/firstName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textWarnLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please enter your last name"
        android:textColor="#D13C3C"
        android:visibility="invisible"

        app:layout_constraintBottom_toTopOf="@+id/lastName"
        app:layout_constraintEnd_toEndOf="@+id/lastName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lastName"
        app:layout_constraintTop_toBottomOf="@+id/firstName"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textWarnEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please enter your email"
        android:textColor="#D13C3C"
        android:visibility="invisible"

        app:layout_constraintBottom_toTopOf="@+id/emailAddress"
        app:layout_constraintEnd_toEndOf="@+id/emailAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailAddress"
        app:layout_constraintTop_toBottomOf="@+id/lastName"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textWarnPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please enter a password"
        android:textColor="#D13C3C"
        android:visibility="invisible"

        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textWarnPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please enter your phone number"
        android:textColor="#D13C3C"
        android:visibility="invisible"

        app:layout_constraintBottom_toTopOf="@+id/phoneNumber"
        app:layout_constraintEnd_toEndOf="@+id/phoneNumber"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/phoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textWarnAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please enter your address"
        android:textColor="#D13C3C"
        android:visibility="invisible"

        app:layout_constraintBottom_toTopOf="@+id/address"
        app:layout_constraintEnd_toEndOf="@+id/address"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/address"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textWarnHealth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please enter your health card number"
        android:textColor="#D13C3C"


        android:visibility="invisible"


        app:layout_constraintBottom_toTopOf="@+id/healthCard"
        app:layout_constraintEnd_toEndOf="@+id/healthCard"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/healthCard"
        app:layout_constraintTop_toBottomOf="@+id/address"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
